# omelette

./: Cargo.toml  README.md  run.py
src/: eqsat.rs  main.rs  term.rs  term_sexp.rs
