[package]
name = "omelette"
version = "0.1.0"
edition = "2021"

[dependencies]
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
timely = "0.15.1"
rand = "0.4"
sexp = "1.1.4"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
once_cell = "1.20.2"
serde = { version = "1.0.216", features = ["derive"] }
